<resources>
    <string name="app_name">Movie App</string>
    <string name="title_tab1">Movies</string>
    <string name="title_tab2">TV Shows</string>
    <string name="title_tab3">Favorites</string>
    <string name="setting">Setting</string>
    <string name="release_date_label">Release Date</string>
    <string name="overview_label">Overview</string>
    <string name="details">Details</string>
    <string name="success_insert_fav">Add to favorites successfully</string>
    <string name="delete_from_fav">Delete from favorites</string>
    <string name="confirm_message">Are you sure want to delete this item?</string>
    <string name="confirm_title">Confirm to delete</string>
    <string name="pos_btn">Yes</string>
    <string name="neg_btn">No</string>
    <string name="success_info">Delete from favorites successfully</string>
    <string name="search">Search</string>
    <string name="not_found">Nothing found, try another query!</string>
    <string name="empty_text">Empty data</string>
    <string name="language">Language</string>
    <string name="release_reminder_title">Release Reminder</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_desc">Reminder for return to app</string>
    <string name="release_reminder_desc">Reminder showing the movie that released today</string>
    <string name="notification_setting_title">Notification Setting</string>
    <string name="daily_message_reminder">Let\'s see what movies are popular today!</string>
    <string name="release_reminder_message">has been released today!</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
