<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/local_btn"
        android:title="@string/language"
        android:icon="@drawable/ic_settings_applications_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/notif_btn"
        android:title="@string/setting"
        android:icon="@drawable/ic_notifications_active_white_24dp"
        app:showAsAction="always" />
</menu>